[package]
name = "moneybrain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
dotenvy = "0.15.7"
futures = "0.3.32"
mongodb = "3.7.0"
path-clean = "1.0.1"
regex = "1.12.4"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
short-uuid = "0.2.1"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"

[[bin]]
name = "moneybrain"
path = "main.rs"
